Fix simple example

--- a/examples/simple/.babelrc
+++ b/examples/simple/.babelrc
@@ -2,6 +2,9 @@
   presets: [
     'react',
   ],
+  plugins: [
+    ['transform-object-rest-spread', { useBuiltIns: true }],
+  ],
   env: {
     development: {
       plugins: [
