--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
+  presets: [
+    'react',
+  ],
   plugins: [
     'transform-es2015-modules-commonjs',
-    ["transform-object-rest-spread", { "useBuiltIns": true }],
+    ['transform-object-rest-spread', { useBuiltIns: true }],
   ]
 }
