--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-core": "^6.23.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-react": "^6.23.0",
     "eslint": "^3.13.0",
-    "jest": "^18.1.0"
+    "jest": "^18.1.0",
+    "react-test-renderer": "^15.4.2"
   }
 }
