--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   plugins: [
     'transform-es2015-modules-commonjs',
+    'transform-class-properties',
     ['transform-object-rest-spread', { useBuiltIns: true }],
   ]
 }
