--- a/examples/simple/.babelrc
+++ b/examples/simple/.babelrc
@@ -3,6 +3,7 @@
     'react',
   ],
   plugins: [
+    'transform-class-properties',
     ['transform-object-rest-spread', { useBuiltIns: true }],
   ],
   env: {
