--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
