--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@lttb/eslint-config-default": "github:lttb/configs#js",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.23.0",
